# test_wheel_odometry

./: .clang-format  CMakeLists.txt  README.md
matlab/: test_wheel-IMU_odometry.m
python_symbolic/: calculate_matrix_exponential.py
src/numerical_integrator/: differential_equation.h  runge_kutta_integrator.h  runge_kutta_integrator_fourth_order.cc  runge_kutta_integrator_fourth_order.h  two_wheeled_robot_differential_equation.h
test/: test_data_generation.cc  test_data_plot.cc  test_eskf.cc  test_eskf2.cc  test_kf_wheel_angular_rate.cc  test_kf_with_acc.cc  test_runge_kutta.cc  test_wheel_imu_odometry.cc
wheel_imu_error_state_kalman_filter/: types.h  wheel_imu_error_state_kalman_filter.cc  wheel_imu_error_state_kalman_filter.h
